--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Vendor/glm"]
 	path = Vendor/glm
 	url = https://github.com/g-truc/glm
+[submodule "Vendor/efsw"]
+	path = Vendor/efsw
+	url = https://github.com/SpartanJ/efsw
