--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory("Vendor/tinyobjloader")
 add_subdirectory("Vendor/glm")
 add_subdirectory("Vendor/GLFW")
 add_subdirectory("Vendor/Glad")
+add_subdirectory("Vendor/efsw")
 # add_subdirectory("Vendor/rttr")
 
 # find_package(RTTR CONFIG REQUIRED Core)
@@ -26,6 +27,7 @@ add_executable(${PROJECT_NAME}
 "Source/Camera.cpp"
 "Source/Skybox.cpp"
 "Source/Vertex.cpp"
+"Source/FileWatcher.cpp"
 "Source/Billboard.cpp"
 "Vendor/ImGui/imgui.cpp"
 "Vendor/ImGui/imgui_demo.cpp"
@@ -53,4 +55,5 @@ target_link_libraries(${PROJECT_NAME} PUBLIC stdc++fs)
 target_link_libraries(${PROJECT_NAME} PUBLIC glm::glm)
 target_link_libraries(${PROJECT_NAME} PUBLIC glad)
 target_link_libraries(${PROJECT_NAME} PUBLIC tinyobjloader)
+target_link_libraries(${PROJECT_NAME} PUBLIC efsw)
 # target_link_libraries(${PROJECT_NAME} PUBLIC Core_Lib)
