--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,34 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CPP_LINKER_FLAGS "-loleaut32 -limm32 -lversion -lole32")
 
+set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT FALSE)
+set(ASSIMP_BUILD_OBJ_IMPORTER TRUE)
+set(ASSIMP_BUILD_GLTF_IMPORTER TRUE)
+set(ASSIMP_BUILD_FBX_IMPORTER TRUE)
+
+set(ASSIMP_BUILD_M3D_EXPORTER FALSE)
+set(ASSIMP_BUILD_ASSBIN_EXPORTER FALSE)
+set(ASSIMP_BUILD_ASSXML_EXPORTER FALSE)
+set(ASSIMP_BUILD_GLTF_EXPORTER FALSE)
+set(ASSIMP_BUILD_OBJ_EXPORTER FALSE)
+set(ASSIMP_BUILD_OPENGEX_EXPORTER FALSE)
+set(ASSIMP_BUILD_PLY_EXPORTER FALSE)
+set(ASSIMP_BUILD_3DS_EXPORTER FALSE)
+set(ASSIMP_BUILD_COLLADA_EXPORTER FALSE)
+set(ASSIMP_BUILD_FBX_EXPORTER FALSE)
+set(ASSIMP_BUILD_STL_EXPORTER FALSE)
+set(ASSIMP_BUILD_X_EXPORTER FALSE)
+set(ASSIMP_BUILD_X3D_EXPORTER FALSE)
+set(ASSIMP_BUILD_3MF_EXPORTER FALSE)
+set(ASSIMP_BUILD_ASSJSON_EXPORTER FALSE)
+set(ASSIMP_BUILD_STEP_EXPORTER FALSE)
+
 add_subdirectory("Vendor/tinyobjloader")
 add_subdirectory("Vendor/glm")
 add_subdirectory("Vendor/GLFW")
 add_subdirectory("Vendor/Glad")
 add_subdirectory("Vendor/efsw")
+add_subdirectory("Vendor/assimp")
 # add_subdirectory("Vendor/rttr")
 
 # find_package(RTTR CONFIG REQUIRED Core)
@@ -58,4 +81,5 @@ target_link_libraries(${PROJECT_NAME} PUBLIC glm::glm)
 target_link_libraries(${PROJECT_NAME} PUBLIC glad)
 target_link_libraries(${PROJECT_NAME} PUBLIC tinyobjloader)
 target_link_libraries(${PROJECT_NAME} PUBLIC efsw)
+target_link_libraries(${PROJECT_NAME} PUBLIC assimp)
 # target_link_libraries(${PROJECT_NAME} PUBLIC Core_Lib)
