--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ add_executable(${PROJECT_NAME}
 "Source/Skybox.cpp"
 "Source/Vertex.cpp"
 "Source/Render.cpp"
+"Source/Scene.cpp"
 "Source/FileWatcher.cpp"
 "Source/Billboard.cpp"
 "Source/ResourceManager.cpp"
