--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(${PROJECT_NAME}
 "Source/Shader.cpp"
 "Source/Camera.cpp"
 "Source/Skybox.cpp"
+"Source/Framebuffer.cpp"
 "Source/Vertex.cpp"
 "Source/Render.cpp"
 "Source/Scene.cpp"
