Rehaul the entire renderer
New Material System
Remove Blinn-Phong renderer
Fix filewatcher firing multiple times
Fix Shader compilation issues

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Vendor/assimp"]
 	path = Vendor/assimp
 	url = https://github.com/assimp/assimp
+[submodule "Vendor/filewatch"]
+	path = Vendor/filewatch
+	url = https://github.com/ThomasMonkman/filewatch
