Add multiple shadow casting for forward renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,9 @@ add_executable(${PROJECT_NAME}
 "Source/Framebuffer.cpp"
 "Source/Vertex.cpp"
 "Source/Benchmark.cpp"
+"Source/Light.cpp"
 "Source/Quad.cpp"
+"Source/Cube.cpp"
 "Source/Render.cpp"
 "Source/Scene.cpp"
 "Source/Uniform.cpp"
